# tiny_renderer

./: .gitignore  CMakeLists.txt  README.md  run.sh
dependencies/: main.c
dependencies/microui/: microui_renderer.c
dependencies/nuklear/: nuklear_config.c  nuklear_def.h
src/: component.h  config.h  image_view.h  main.c  model.c  model.h  render.c  render.h  tga_image.c  transformation.c  transformation.h  type.c  type.h  vector_math.c  vector_math.h
src/util/: util.c  util.h
